--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -489,7 +489,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
       - configure-infrastructure:
           requires:
             - deploy-infrastructure
@@ -503,7 +503,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
       - deploy-backend:
           requires:
             - run-migrations
