--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,19 +171,22 @@ jobs:
       - run:
           name: Check Frontend against security vulnerabilities
           working_directory: ./frontend
-          command: npm audit --audit-level=critical
-
-
+          command: |
+              npm i
+              npm audit fix --audit-level=critical --force 
   scan-backend:
-    executor: node
+    docker:
+      - image: circleci/node:13.8.0
     steps:
       - checkout
-      - attach_workspace:
-          at: .
+      - restore_cache:
+          keys: [backend-build]
       - run:
-          name: Check Backend against security vulnerabilities
-          working_directory: ./backend
-          command: npm audit --audit-level=critical
+          name: Back-end scan
+          command: |
+            cd backend
+            npm i
+            npm audit fix --audit-level=critical --force
 
 
   deploy-infrastructure:
