--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,7 +174,7 @@ jobs:
           command: |
               npm i
               npm audit fix --audit-level=critical --force 
-              
+
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -191,7 +191,8 @@ jobs:
 
 
   deploy-infrastructure:
-    executor: aws
+    docker:
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
